--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/newPost.html.twig
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/newPost.html.twig
@@ -1,6 +1,8 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-    {{ asd }}
+    <h3>
+        <a href="{{ path('index') }}">Back To Feed</a>
+    </h3>
     {{ form(form) }}
 {% endblock %}
