Added filtering of posts by date(from-to). Buggy.

--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/detail.html.twig
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/detail.html.twig
@@ -31,7 +31,8 @@
     <hr>
     <h1>Comments:</h1>
     {% for c in post.getComments %}
-        <p> <b>{{ c.getAuthor.getName }} :</b>
+        <p> <b>{{ c.getAuthor.getName }}
+                [ {{ c.getCreated.format(datetime_fmt) }} ]:</b>
         {{ c.getText }}
         </p>
     {% endfor %}
