--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/postsList.html.twig
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/postsList.html.twig
@@ -4,11 +4,15 @@
     <h2>Welcome to asdasdBlog!</h2>
     <table>
         <tr>
-            <td>
-                <h3>
-                    <a href="{{ path('newPost') }}">Publish New Post</a>
-                </h3>
-            </td>
+            <th>
+                <a href="{{ path('newPost') }}">Publish New Post</a>
+            </th>
+            <th>
+                Show due date for publish
+            </th>
+        </tr>
+        <tr>
+            <td></td>
             <td>
                 {{  form(publishFromTo, {'attr': {'novalidate': 'novalidate'}})  }}
             </td>
@@ -38,15 +42,16 @@
             </td>
             {# Created #}
             <td>
-                {# p.getCreated.format(datetime_fmt) #}
+                {{ p.getCreated.format(datetime_fmt) }}
             </td>
+                {#
             <td>
                 {{ p.getPublishFrom.format(datetime_fmt) }}
             </td><td> ===
             </td>
             <td>
                 {{ p.getPublishTo.format(datetime_fmt) }}
-            </td>
+            </td>#}
             {# edit this post #}
             <td>
                 <a href="{{ path('remove', {id:p.getId}) }}">[edit this post]</a>
