--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/postsList.html.twig
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Default/postsList.html.twig
@@ -5,6 +5,8 @@
     <table>
         <tr>
             <th>
+                <a href="{{ path('index') }}">Back To Starting Page</a>
+            </th><th>
                 <a href="{{ path('newPost') }}">Publish New Post</a>
             </th>
             <th>
@@ -12,6 +14,7 @@
             </th>
         </tr>
         <tr>
+            <td></td>
             <td></td>
             <td>
                 {{  form(publishFromTo, {'attr': {'novalidate': 'novalidate'}})  }}
@@ -25,8 +28,11 @@
         <tr>
             {# post title -> post details #}
             <td>
-                <a href="{{ path('post', {id:p.getId}) }}"><b>{{ p.getTitle }}</b></a>
+                <a href="{{ path('postDetails', {id:p.getId}) }}"><b>{{ p.getTitle }}</b></a>
                 <br>
+                {% if (p.getPrivate == true)%}
+                    private post
+                {% endif %}
                 by <a href="{{ path('index', {filterAuthorId:p.getAuthor.getId}) }}">
                     {{ p.getAuthor.getName }}</a>,
                 {{ p.getCreated.format(datetime_fmt) }}
@@ -52,11 +58,11 @@
             </td>#}
             {# edit this post #}
             <td>
-                <a href="{{ path('remove', {id:p.getId}) }}">[edit this post]</a>
+                <a href="{{ path('editPost', {postId:p.getId}) }}">[edit this post]</a>
             </td>
             {# remove this post #}
             <td>
-                <a href="{{ path('remove', {id:p.getId}) }}">[remove this post]</a>
+                <a href="{{ path('removePost', {removeId:p.getId}) }}">[remove this post]</a>
             </td>
         </tr>
     {%  endfor %}
