--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Login/login.html.twig
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Login/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "::logreg.html.twig" %}
 
 
 {% block body %}
@@ -6,15 +6,17 @@
         <div>{{ error.messageKey|trans(error.messageData) }}</div>
     {% endif %}
 
-<div class="centerForm">
+<div class="container">
     <form action="{{ path('login_check') }}" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
+        <br/>
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password" />
-
-        <button type="submit">login</button>
+        <br/>
+        <span class="centerForm">
+            <button type="submit">login</button>
+        </span>
     </form>
 </div>
 {% endblock %}
