--- a/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Login/register.html.twig
+++ b/src/Cvut/Fit/BiPwt/BlogBundle/Resources/views/Login/register.html.twig
@@ -1,7 +1,7 @@
-{% extends "::base.html.twig" %}
+{% extends "::logreg.html.twig" %}
 {% block body %}
 
-<div class="centerForm">
+<div class="container">
     {{ form(form) }}
 </div>
 {% endblock %}
